<resources>
    <string name="app_name">NoteManagementSystem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Note Personal Diary</string>
    <string name="nav_header_subtitle">duclionel07022@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="category">Category</string>
    <string name="priority">Priority</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_layout_fragment">Change Password Layout Fragment</string>
    <string name="edit_profile_layout_fragment">Edit Profile Layout Fragment</string>
    <string name="note_layout_fragment">Note Layout Fragment</string>
    <string name="status_layout_fragment">Status Layout Fragment</string>
    <string name="note">Note</string>
    <string name="app_name_signin">Note Management System</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="exit">Exit</string>
    <string name="sign_up_form">Sign Up Form</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="change">Change</string>
    <string name="change_your_password">Change your password</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_password_again">Enter password again</string>
    
    <string name="enter_note_name">Enter Note Name</string>
    <string name="select_category">Select category...</string>
    <string name="select_priority">Select priority...</string>
    <string name="select_status">Select status...</string>
    <string name="select_plan_date">Select plan date</string>
    <string name="bacham">...</string>
    <string name="status">Status</string>
</resources>